<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/manual_group">
        <item android:id="@+id/menu_video_manual"
            android:title="@string/videoManual"/>
        <item android:id="@+id/menu_manual_scan"
            android:title="@string/scanManual"/>
        <item android:id="@+id/menu_manual"
            android:title="@string/manual"/>
    </group>
    <group android:id="@+id/other_group">
        <item android:id="@+id/menu_notifications"
            android:title="@string/notification_settings" />
        <item android:id="@+id/menu_licenses"
            android:title="@string/licenses"/>
        <item android:id="@+id/menu_info"
            android:title="@string/info"/>
    </group>
</menu>
