<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

  <ProgressBar
      android:id="@+id/storageBar"
      style="@android:style/Widget.ProgressBar.Horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:progressTint="@color/colorPositive" />

  <TextView
      android:id="@+id/timeRemaining"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/timeRemaining" />

  <TextView
      android:id="@+id/capacity"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/capacity" />

  <TextView
      android:id="@+id/free"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/free" />

  <TextView
      android:id="@+id/used"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/used" />
</LinearLayout>