<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <LinearLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_gravity="center_vertical"
      android:orientation="horizontal">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="7dp"
        android:text="@string/projectNameLabel" />

      <TextView
        android:id="@+id/textMissionName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
      android:id="@+id/setMissionButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="7pt"
      android:layout_marginBottom="7pt"
      android:layout_gravity="center_vertical"
      android:text="@string/setMissionButton" />

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <LinearLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_gravity="center_vertical"
      android:orientation="horizontal">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="7dp"
        android:text="@string/defaultRecordingType" />

      <TextView
        android:id="@+id/textDefaultRecordingType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
      android:id="@+id/setDefaultRecordingType"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="7pt"
      android:layout_marginBottom="7pt"
      android:layout_gravity="center_vertical"
      android:text="@string/setDefaultRecordingType" />
  </LinearLayout>


</LinearLayout>