<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/checkWifiAppBarLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:scaleType="fitStart"
          android:paddingTop="10dp"
          android:paddingBottom="10dp"
          android:src="@drawable/dotscene_logo" />
    </androidx.appcompat.widget.Toolbar>
  </com.google.android.material.appbar.AppBarLayout>

  <LinearLayout
      android:id="@+id/checkWifiLinLayout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:gravity="center"
      android:orientation="vertical"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/textConnectToWifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7pt"
        android:text="@string/checkWifiWrongWifi" />

    <Button
        android:id="@+id/wifiPreferencesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7pt"
        android:text="@string/settings" />

  </LinearLayout>

  <LinearLayout
      android:id="@+id/ll_help_video"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_alignParentBottom="true"
      android:layout_marginEnd="@dimen/activity_horizontal_margin"
      android:layout_marginBottom="@dimen/activity_vertical_margin"
      android:clipChildren="false"
      android:orientation="horizontal">

    <TextView
        android:id="@+id/txt_help_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/fab_menu_txt_margin"
        android:gravity="end"
        android:text="@string/videoManual"
        android:textAlignment="textEnd"
        android:visibility="invisible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:onClick="show_video"
        app:fabCustomSize="55dp"
        app:srcCompat="@drawable/ic_baseline_local_movies_24" />
  </LinearLayout>

  <LinearLayout
      android:id="@+id/ll_manual_short"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_alignParentBottom="true"
      android:layout_marginEnd="@dimen/activity_horizontal_margin"
      android:layout_marginBottom="@dimen/activity_vertical_margin"
      android:orientation="horizontal">

    <TextView
        android:id="@+id/txt_manual_short"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/fab_menu_txt_margin"
        android:gravity="end"
        android:text="@string/scanManual"
        android:textAlignment="textEnd"
        android:visibility="invisible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_manual_short"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:clickable="true"
        android:focusable="true"
        android:onClick="show_short_manual"
        app:fabCustomSize="55dp"
        app:srcCompat="@drawable/ic_baseline_description_24" />
  </LinearLayout>

  <LinearLayout
      android:id="@+id/ll_manual_long"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_alignParentBottom="true"
      android:layout_marginEnd="@dimen/activity_horizontal_margin"
      android:layout_marginBottom="@dimen/activity_vertical_margin"
      android:orientation="horizontal">

    <TextView
        android:id="@+id/txt_manual_long"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/fab_menu_txt_margin"
        android:gravity="end"
        android:text="@string/manual"
        android:textAlignment="textEnd"
        android:visibility="invisible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_manual_long"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:clickable="true"
        android:onClick="show_long_manual"
        app:fabCustomSize="55dp"
        app:srcCompat="@drawable/ic_baseline_description_24"
        android:focusable="true" />
  </LinearLayout>

<LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_alignParentBottom="true"
      android:layout_marginEnd="@dimen/activity_horizontal_margin"
      android:layout_marginBottom="@dimen/activity_vertical_margin"
      android:orientation="horizontal">

    <TextView
        android:id="@+id/txt_help_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/fab_menu_txt_margin"
        android:gravity="end"
        android:text="@string/help_menu"
        android:textAlignment="textEnd"
        android:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:backgroundTint="@color/colorNegative"
        android:clickable="true"
        android:onClick="toggle_help_menu"
        app:backgroundTint="@color/colorNegative"
        app:srcCompat="@drawable/ic_baseline_help_outline_24"
        app:maxImageSize="36dp"
        android:focusable="true" />
  </LinearLayout>
</RelativeLayout>
